# one-click-demo

./: .gitignore  Dockerfile  app.json  pyproject.toml
docker_scripts/: entrypoint.sh  functions
src/backend/: main.py
src/frontend/: package-lock.json  package.json
src/frontend/src/app/: page.tsx
