[tool.poetry]
name = "one-click-demo"
version = "0.1.0"
description = ""
authors = ["Alex W <alex@blinkenlights.ca>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
